[gd_scene load_steps=20 format=3 uid="uid://c2qbrpracjsi5"]

[ext_resource type="PackedScene" uid="uid://cvgjcwqn6k8eu" path="res://Scenes/UI/Overlay/health.tscn" id="1_3xw0u"]
[ext_resource type="Script" uid="uid://bj3o2h06hj6ck" path="res://Scripts/Enemies/enemy.gd" id="1_vumo0"]
[ext_resource type="Texture2D" uid="uid://clxtedvmnmjck" path="res://Assets/Tutorial Open Assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc-Idle.png" id="1_ws5q1"]
[ext_resource type="Shader" uid="uid://o6ancnl5jgcr" path="res://Shaders/Blink.gdshader" id="2_kapy6"]
[ext_resource type="FontFile" uid="uid://x2dwsfc3en6q" path="res://Assets/Tutorial Open Assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="4_6hc3a"]
[ext_resource type="PackedScene" uid="uid://d3ww40qkxw5eq" path="res://Scenes/Dialogue/dialogue_interact.tscn" id="6_tq37w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6hc3a"]
resource_local_to_scene = true
shader = ExtResource("2_kapy6")
shader_parameter/blink_color = Color(1, 1, 1, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kapy6"]
atlas = ExtResource("1_ws5q1")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hc3a"]
atlas = ExtResource("1_ws5q1")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vumo0"]
atlas = ExtResource("1_ws5q1")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_31h1d"]
atlas = ExtResource("1_ws5q1")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfwqp"]
atlas = ExtResource("1_ws5q1")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d22v1"]
atlas = ExtResource("1_ws5q1")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpvyt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kapy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hc3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vumo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31h1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfwqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d22v1")
}],
"loop": false,
"name": &"Attack_shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kapy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hc3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vumo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31h1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfwqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d22v1")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kapy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hc3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vumo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31h1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfwqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d22v1")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_vumo0"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_31h1d"]
gradient = SubResource("Gradient_vumo0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dfwqp"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector3(0, -0.5, 0)
spread = 90.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
damping_min = 50.000004
damping_max = 100.00001
scale_min = 0.19999999
color = Color(1, 0.07058824, 0.13333334, 1)
color_ramp = SubResource("GradientTexture1D_31h1d")

[sub_resource type="CircleShape2D" id="CircleShape2D_vumo0"]
radius = 15.321566

[sub_resource type="CircleShape2D" id="CircleShape2D_3xw0u"]
radius = 7.0

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("shootPoint") groups=["Enemy"]]
collision_mask = 5
script = ExtResource("1_vumo0")
shootPoint = NodePath("CollisionShape2D")

[node name="Health" parent="." instance=ExtResource("1_3xw0u")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6hc3a")
sprite_frames = SubResource("SpriteFrames_wpvyt")
animation = &"Attack_shoot"
autoplay = "Idle"

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -26.0
offset_right = 20.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("4_6hc3a")
theme_override_font_sizes/font_size = 8
text = "HP: 50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.8
one_shot = true
explosiveness = 1.0
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_dfwqp")

[node name="in_range_shoot_timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 129
collision_mask = 132

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(4.425, 0.41)
shape = SubResource("CircleShape2D_vumo0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3xw0u")

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(10, 0)
target_position = Vector2(0, 10)

[node name="DialogueInteract" parent="." instance=ExtResource("6_tq37w")]

[connection signal="hp_changed" from="Health" to="." method="_on_health_hp_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="in_range_shoot_timer" to="." method="_on_timer_timeout"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
